--- a/HeroJourney/Views/Home/MainMenu.cshtml
+++ b/HeroJourney/Views/Home/MainMenu.cshtml
@@ -23,14 +23,11 @@
 
     <li>
         <a asp-controller="Options" asp-action="PlayerStats" class="card" style="height:300px">
+
             <img src="~/Images/playerstats.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"></svg>
-                    <img class="card__thumb" src="/Images/logo.png" alt="" />
-                    <div class="card__header-text">
-                        <h3 class="card__title" style="font-size:20px">PLAYER STATS</h3>
-                    </div>
+                    <h1 class="card__title" style="font-size:20px"> PLAYER STATS</h1>
                 </div>
                 <p class="card__description"></p>
             </div>
@@ -43,11 +40,7 @@
             <img src="~/Images/arena.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"></svg>
-                    <img class="card__thumb" src="/Images/logo.png" alt="" />
-                    <div class="card__header-text">
-                        <h1 class="card__title" style="font-size:20px">ARENA</h1>
-                    </div>
+                    <h3 class="card__title" style="font-size:20px">ARENA</h3>
                 </div>
                 <p class="card__description"></p>
             </div>
@@ -59,8 +52,6 @@
             <img src="~/Images/@imgText" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"></svg>
-                    <img class="card__thumb" src="/Images/logo.png" alt="" />
                     <div class="card__header-text">
                         <h3 class="card__title" style="font-size:20px">HERO STATISTICS</h3>
                     </div>
@@ -76,8 +67,6 @@
             <img src="~/Images/book.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"></svg>
-                    <img class="card__thumb" src="/Images/logo.png" alt="" />
                     <div class="card__header-text">
                         <h3 class="card__title" style="font-size:20px">STORY TALE</h3>
                     </div>
@@ -89,11 +78,9 @@
 
     <li>
         <a asp-action="Shop" asp-controller="Options" class="card">
-            <img src="~/Images/shop.jpg" class="card__image" alt="" style="height:220px;" />
+            <img src="~/Images/shop.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"></svg>
-                    <img class="card__thumb" src="/Images/logo.png" alt="" />
                     <div class="card__header-text">
                         <h3 class="card__title" style="font-size:20px">SHOP</h3>
                     </div>
@@ -104,16 +91,15 @@
     </li>
 
     <li>
-        <a asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("LoginPage", "Home", new { area = "" })" class="card" style="background-color:black">
+        <a asp-action="AccountPage" asp-controller="Home" class="card" style="background-color:black">
             <img src="~/Images/exit.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header" style="background-color:black">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"></svg>
                     <div class="card__header-text">
-                        <h3 class="card__title" style="color:red;font-size:26px;margin-left:80px">Logout</h3>
+                        <h3 class="card__title" style="color:red;font-size:26px;margin-left:80px">Account</h3>
                     </div>
                 </div>
-                <p class="card__description">Bye, Hero!</p>
+                <p class="card__description"></p>
             </div>
         </a>
     </li>
