--- a/HeroJourney/wwwroot/css/MainMenu.css
+++ b/HeroJourney/wwwroot/css/MainMenu.css
@@ -23,6 +23,7 @@ body {
     list-style-type: none;
     margin-left: 60px;
     opacity: 0.88;
+   
 }
 
 .card {
@@ -33,10 +34,11 @@ body {
     border-radius: calc(var(--curve) * 1px);
     overflow: hidden;
     text-decoration: none;
+   
 }
 
 .card__image {
-    width: 300px;
+    width: 500px;
     height: auto;
 }
 
@@ -50,6 +52,7 @@ body {
     background-color: var(--surface-color);
     transform: translateY(100%);
     transition: .2s ease-in-out;
+    background-color: black;
 }
 
 .card:hover .card__overlay {
@@ -67,6 +70,8 @@ body {
     transform: translateY(-100%);
     transition: .2s ease-in-out;
     font-size: 16px;
+    background-color: black;
+   
 }
 
 .card__arc {
@@ -76,6 +81,7 @@ body {
     bottom: 100%;
     right: 0;
     z-index: 1;
+  
 }
 
     .card__arc path {
@@ -91,12 +97,16 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+   
 }
 
 .card__title {
     font-size: 1em;
     margin: 0 0 .3em;
     color: #6A515E;
+    position: relative;
+    color: white;
+   
 }
 
 .card__tagline {
@@ -110,6 +120,7 @@ body {
 .card__status {
     font-size: .8em;
     color: #D7BDCA;
+   
 }
 
 .card__description {
@@ -121,4 +132,8 @@ body {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
     overflow: hidden;
+   
 }
+
+
+
