--- a/HeroJourney/Views/Home/_CreatePlayer.cshtml
+++ b/HeroJourney/Views/Home/_CreatePlayer.cshtml
@@ -7,7 +7,7 @@
 
         <form method="get">
             <div class="card">
-                <img src="~/Images/paladin.jpg" />
+                <img src="~/Images/Heroes/paladin.jpg" />
                 <div class="info">
                     <h1>Paladin</h1>
                     <p></p>
@@ -19,7 +19,7 @@
 
         <form method="get">
             <div class="card">
-                <img src="~/Images/wizard.jpg" />
+                <img src="~/Images/Heroes/wizard.jpg" />
                 <div class="info">
                     <h1>Wizard</h1>                    
                     <input type="hidden" asp-for="@Model.ClassName" value="Wizard" />
@@ -30,7 +30,7 @@
 
         <form method="get">
             <div class="card">
-                <img src="~/Images/druid.jpg" />
+                <img src="~/Images/Heroes/druid.jpg" />
                 <div class="info">
                     <h1>Druid</h1>                
                     <input type="hidden" asp-for="@Model.ClassName" value="Druid" />
@@ -41,7 +41,7 @@
 
         <form method="get">
             <div class="card">
-                <img src="~/Images/viking.jpg" />
+                <img src="~/Images/Heroes/viking.jpg" />
                 <div class="info">
                     <h1>Viking</h1>                    
                     <input type="hidden" asp-for="@Model.ClassName" value="Viking" />
