--- a/HeroJourney/Views/Options/EndFight.cshtml
+++ b/HeroJourney/Views/Options/EndFight.cshtml
@@ -9,7 +9,7 @@
             <div class="title-content">
 
             </div>
-            <img src="~/Images/arenaviking.png" />
+            <img src="~/Images/Heroes/Arena/@Model.HeroImageUrl" />
 
             <div class="card-info">
                 <input type="hidden" asp-for="@Model.Turn" value="@Model.Turn" />
