--- a/HeroJourney/Views/Options/PlayerStats.cshtml
+++ b/HeroJourney/Views/Options/PlayerStats.cshtml
@@ -6,7 +6,7 @@
 <a asp-action="MainMenu" asp-controller="Home"><i class='fas fa-long-arrow-alt-left' style='font-size: 45px; color: #ffcc00'></i></a>
 <a asp-action="ChangeUsername" asp-controller="Options" class="buttonChange">Change Username</a>
 <div class="field">
-    <div><img class="left" src="../Images/statsImg.png" alt="Alternate Text" /></div>    
+    <div><img class="left" src="../Images/Page/statsImg.png" alt="Alternate Text" /></div>    
 
     <div class="row">
         <p>Name: @Model.Name</p>
