--- a/HeroJourney/wwwroot/css/AccountPage.css
+++ b/HeroJourney/wwwroot/css/AccountPage.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Images/AccountPage.jpg");
+    background-image: url("../Images/Page/AccountPage.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
