--- a/HeroJourney/wwwroot/css/Arena.css
+++ b/HeroJourney/wwwroot/css/Arena.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Images/fightarena.jpg");
+    background-image: url("../Images/Page/fightarena.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     font-family:fantasy
