--- a/HeroJourney/wwwroot/css/DeadPage.css
+++ b/HeroJourney/wwwroot/css/DeadPage.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Images/endpage.jpg");
+    background-image: url("../Images/Page/endpage.jpg");
     background-size: cover;
 }
 
