--- a/HeroJourney/wwwroot/css/DeadView.css
+++ b/HeroJourney/wwwroot/css/DeadView.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Images/deadview.jpg");
+    background-image: url("../Images/Page/deadview.jpg");
     background-size: contain;
     
 }
