--- a/HeroJourney/wwwroot/css/Register.css
+++ b/HeroJourney/wwwroot/css/Register.css
@@ -1,5 +1,5 @@
 ﻿body{
-    background-image:url("/Images/register.jpg");
+    background-image:url("/Images/Page/register.jpg");
     background-size:cover;
 
 }
