--- a/HeroJourney/wwwroot/css/Shop.css
+++ b/HeroJourney/wwwroot/css/Shop.css
@@ -1,6 +1,6 @@
 ﻿body {
     font-family: 'Blackwood Castle';
-    background-image: url("../Images/smithy.jpg");
+    background-image: url("../Images/Page/smithy.jpg");
     background-size: cover;
    
 }
