--- a/HeroJourney/wwwroot/css/HeroRecords.css
+++ b/HeroJourney/wwwroot/css/HeroRecords.css
@@ -1,9 +1,11 @@
 ﻿body{
-    background-image:url("../Images/Page/statswallpaper.jpg");
-    font-family:'Blackwood Castle';
+    background-image:url("../Images/Page/herorecords.jpg");
     background-size:cover;
-    display:flex;
+    background-repeat:no-repeat;
+    font-family:'Blackwood Castle Shadow';
+
 }
+
 
 h1 {
     font-size: 50px;
@@ -12,24 +14,27 @@ h1 {
     font-weight: 300;
     text-align: center;
     margin-bottom: 15px;
+    
 }
 
 table {
     width: 100%;
     table-layout: fixed;
+  
 }
 
 .tbl-header {
     background-color: rgba(255,255,255,0.5);
+    
 }
 
 .tbl-content {
     height: 300px;
     overflow-x: auto;
     margin-top: 0px;
-    border: 1px solid rgba(255,255,255,0.9);
-    background-color: rgba(97, 96, 96,0.5);
- 
+    border: 3px solid rgba(255,255,255,0.9);
+    background-color: rgba(0,0,0,0.9);
+    
 }
 
 th {
@@ -45,54 +50,19 @@ td {
     padding: 15px;
     text-align: center;
     vertical-align: middle;
-    font-weight: 300;
+    font-weight: 500;
     font-size: 25px;
-    color: black;
+    color: white;
     border-bottom: solid 1px rgba(255,255,255,0.1);
 }
 
-
-/* demo styles */
-
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-
-
 section {
     margin: 50px;
-    margin-top:20px;
+    margin-top: 20px;
+  
 }
 
 
-/* follow me template */
-.made-with-love {
-    margin-top: 40px;
-    padding: 10px;
-    clear: left;
-    text-align: center;
-    font-size: 10px;
-    font-family: arial;
-    color: #fff;
-}
-
-    .made-with-love i {
-        font-style: normal;
-        color: #F50057;
-        font-size: 14px;
-        position: relative;
-        top: 2px;
-    }
-
-    .made-with-love a {
-        color: #fff;
-        text-decoration: none;
-    }
-
-        .made-with-love a:hover {
-            text-decoration: underline;
-        }
-
-
-/* for custom scrollbar for webkit browser*/
 
 ::-webkit-scrollbar {
     width: 6px;
