--- a/HeroJourney/wwwroot/css/Login.css
+++ b/HeroJourney/wwwroot/css/Login.css
@@ -1,5 +1,5 @@
 ﻿body{
-    background-image:url("../Images/loginWallpaper.jpg");
+    background-image:url("../Images/Page/loginWallpaper.jpg");
     background-repeat:no-repeat;
     background-size:cover;
 }
