--- a/HeroJourney/wwwroot/css/PlayerStats.css
+++ b/HeroJourney/wwwroot/css/PlayerStats.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Images/statswallpaper.jpg");
+    background-image: url("../Images/Page/statswallpaper.jpg");
     background-size: cover;
     font-family:'Blackwood Castle'
 }
