--- a/HeroJourney/wwwroot/css/StoryTale.css
+++ b/HeroJourney/wwwroot/css/StoryTale.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Images/story.jpg");
+    background-image: url("../Images/Page/story.jpg");
     background-size: cover;
     font-size: 30px;
     font-weight: 600;
