--- a/HeroJourney/wwwroot/css/loginpage.css
+++ b/HeroJourney/wwwroot/css/loginpage.css
@@ -1,6 +1,6 @@
 ﻿body {
     font-family: Elecstrom;
-    background-image:url("../Images/loginWallpaper.jpg");
+    background-image:url("../Images/Page/loginWallpaper.jpg");
     background-repeat:no-repeat;
     background-size:cover;
 }
