--- a/HeroJourney/Views/Home/MainMenu.cshtml
+++ b/HeroJourney/Views/Home/MainMenu.cshtml
@@ -36,7 +36,7 @@
 
 
     <li>
-        <a asp-controller="Options" asp-action="Arena" class="card" style="height:300px;">
+        <a asp-controller="Options" asp-action="GenerateArena" class="card" style="height:300px;">
             <img src="~/Images/Menu/arena.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
@@ -61,14 +61,13 @@
         </a>
     </li>
 
-
     <li>
         <a asp-controller="Options" asp-action="StoryTale" class="card" style="height:320px">
             <img src="~/Images/Menu/book.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header">
                     <div class="card__header-text">
-                        <h3 class="card__title" style="font-size:20px">STORY TALE(Soon..)</h3>
+                        <h3 class="card__title" style="font-size:20px">STORY</h3>
                     </div>
                 </div>
                 <p class="card__description"></p>
