--- a/HeroJourney/Views/Home/MainMenu.cshtml
+++ b/HeroJourney/Views/Home/MainMenu.cshtml
@@ -59,21 +59,7 @@
                 <p class="card__description"></p>
             </div>
         </a>
-    </li>
-
-    <li>
-        <a asp-controller="Options" asp-action="StoryTale" class="card" style="height:320px">
-            <img src="~/Images/Menu/book.jpg" class="card__image" alt="" />
-            <div class="card__overlay">
-                <div class="card__header">
-                    <div class="card__header-text">
-                        <h3 class="card__title" style="font-size:20px">STORY</h3>
-                    </div>
-                </div>
-                <p class="card__description"></p>
-            </div>
-        </a>
-    </li>
+    </li>  
 
     <li>
         <a asp-action="Shop" asp-controller="Options" class="card">
@@ -103,8 +89,8 @@
         </a>
     </li>    
 
-    <li style="margin-left:340px;width:100%">
-        <a asp-action="AccountPage" asp-controller="Home" class="card" style="background-color:black">
+    <li style="margin-left:140px;width:100%">
+        <a asp-action="AccountPage" asp-controller="Home" class="card" style="background-color:black;margin-left:-130px">
             <img src="~/Images/Menu/exit.jpg" class="card__image" alt="" />
             <div class="card__overlay">
                 <div class="card__header" style="background-color:black">
@@ -115,8 +101,7 @@
                 <p class="card__description"></p>
             </div>
         </a>
-    </li>
-
-    
+    </li>        
 
 </ul>
+
