--- a/HeroJourney/Views/Options/PlayerStats.cshtml
+++ b/HeroJourney/Views/Options/PlayerStats.cshtml
@@ -3,7 +3,7 @@
 <link href="~/css/PlayerStats.css" rel="stylesheet" />
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
-<a asp-action="MainMenu" asp-controller="Home"><i class='fas fa-long-arrow-alt-left' style='font-size: 45px; color: #ffcc00'></i></a>
+<a asp-action="MainMenu" asp-controller="Home"><i class='fas fa-long-arrow-alt-left' style='font-size: 45px; color: #ffcc00'></i>Back</a>
 <a asp-action="ChangeUsername" asp-controller="Options" class="buttonChange">Change Username</a>
 <div class="field">
     <div><img class="left" src="../Images/Page/statsImg.png" alt="Alternate Text" /></div>    
